--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,8 +1,2 @@
 parameters:
-	level: 6
-	fileExtensions:
-		- php
-	ignoreErrors:
-		- '#Call to static method info\(\) on an unknown class Log.#'
-		- '#Function config not found.#'
-		- '#.+ extends unknown class Illuminate\Console\Command.#'
+	level: max
