--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,3 +1,7 @@
 parameters:
-	level: 1
-	
+  level: 8
+  ignoreErrors:
+        - '/Parameter #1 \$json of function json_decode expects string, string\|false given\./'
+        - '/Call to static method info\(\) on an unknown class Log./'
+        - '/Function config not found./'
+        - '/.+ extends unknown class Illuminate\Console\Command./'
