--- a/grumphp.yml
+++ b/grumphp.yml
@@ -2,5 +2,9 @@
 grumphp:
   tasks:
     phpstan: ~
-    phpmd: 
+    phpmd:
+      whitelist_patterns: []
+      exclude: []
+      report_format: text
       ruleset: ['cleancode', 'codesize', 'naming']
+      triggered_by: ['php']
