--- a/grumphp.yml
+++ b/grumphp.yml
@@ -1,14 +1,7 @@
 # grumphp.yml
 grumphp:
   tasks:
-    phpstan:
-      level: 8
-      ignore_patterns: [
-        '/Parameter #1 \$json of function json_decode expects string, string\|false given\./',
-        '/Call to static method info\(\) on an unknown class Log./',
-        '/Function config not found./',
-        '/.+ extends unknown class Illuminate\Console\Command./'
-      ]
+    phpstan: ~
     phpmd:
       whitelist_patterns: []
       exclude: []
